--- a/2_Trabajar_Archivos.ipynb
+++ b/2_Trabajar_Archivos.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,17 +39,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Curso Python\n",
+      "\n",
+      "Estudiante Kevin Esquivel\n",
+      "\n",
+      "ICAI UNA\n",
+      "\n",
+      "Fin del archivo\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
+    "archivo = open(\"archivo.txt\", \"r\")  # \"r\" indica modo lectura\n",
+    "\n",
     "linea = archivo.readline()\n",
     "print(linea)  # Imprime la línea leída\n",
     "\n",
     "# Leyendo y procesando cada línea\n",
     "while linea:\n",
     "    # Procesar la línea aquí (por ejemplo, limpiar o analizar datos)\n",
-    "    linea = archivo.readline()"
+    "    linea = archivo.readline()\n",
+    "    print(linea)"
    ]
   },
   {
@@ -69,10 +87,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Curso Python\n",
+      "Estudiante Kevin Esquivel\n",
+      "ICAI UNA\n",
+      "Fin del archivo\n"
+     ]
+    }
+   ],
    "source": [
+    "archivo = open(\"archivo.txt\", \"r\")  # \"r\" indica modo lectura\n",
+    "\n",
     "contenido = archivo.read()\n",
     "print(contenido)"
    ]
@@ -93,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,13 +148,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "archivo = open(\"archivo_nuevo.txt\", \"w\")  # \"w\" indica modo escritura\n",
-    "archivo.write(\"¡Hola, mundo!\\n\")  # Escribe una línea en el archivo\n",
-    "archivo.close()"
+    "archivo.write(\"Hola, mi nombre es Kevin Esquivel.\\n\")  # Escribe una línea en el archivo\n",
+    "archivo.close()\n",
+    "# Cada vez que se ejecute, se sobreescribe el archivo"
    ]
   },
   {
@@ -145,12 +177,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "archivo = open(\"archivo_existente.txt\", \"a\")\n",
-    "archivo.write(\"¡Más datos para el archivo!\\n\")\n",
+    "archivo = open(\"archivo_nuevo.txt\", \"a\") # a es de append\n",
+    "archivo.write(\"De esta manera agregamos mas informacion al archivo.\\n\")\n",
     "archivo.close()"
    ]
   },
@@ -172,37 +204,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error al abrir el archivo: [Errno 2] No such file or directory: 'archivo.txt'\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'archivo' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mError al abrir el archivo: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00me\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m----> 7\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[43marchivo\u001b[49m:\n\u001b[0;32m      8\u001b[0m         archivo\u001b[38;5;241m.\u001b[39mclose()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'archivo' is not defined"
+      "Error al abrir el archivo: division by zero\n",
+      "Archivo cerrado\n"
      ]
     }
    ],
    "source": [
     "try:\n",
     "    archivo = open(\"archivo.txt\", \"r\")\n",
+    "    error_div = 4 / 0 # Error forzado para probar el código\n",
     "    # Operaciones con el archivo\n",
     "except Exception as e:  # Captura cualquier excepción\n",
     "    print(f\"Error al abrir el archivo: {e}\")\n",
     "finally:\n",
     "    if archivo:\n",
-    "        archivo.close()"
+    "        archivo.close()\n",
+    "        print('Archivo cerrado')"
    ]
   },
   {
@@ -228,15 +252,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El archivo prueba.txt no existe. Creándolo...\n",
-      "Archivo creado exitosamente.\n"
+      "El contenido del archivo kevin.txt es:\n",
+      "Mi nombre completo es Kevin Esquivel.\n"
      ]
     }
    ],
@@ -271,8 +295,8 @@
     "        archivo.write(contenido)\n",
     "\n",
     "\n",
-    "nombre_archivo = \"prueba.txt\"\n",
-    "contenido_archivo = \"Este es el contenido del archivo.\"\n",
+    "nombre_archivo = \"kevin.txt\"\n",
+    "contenido_archivo = \"Mi nombre completo es Kevin Esquivel.\"\n",
     "\n",
     "# Intentamos leer el archivo\n",
     "contenido_leido = leer_archivo(nombre_archivo)\n",
@@ -286,7 +310,9 @@
     "# Si el archivo existe, imprimimos su contenido\n",
     "else:\n",
     "    print(f\"El contenido del archivo {nombre_archivo} es:\")\n",
-    "    print(contenido_leido)"
+    "    print(contenido_leido)\n",
+    "    \n",
+    "## ESTO SALDRÁ EN EL PROYECTO ##"
    ]
   }
  ],
@@ -306,7 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
