--- a/3_Modulos_Paquetes_Bibliotecas.ipynb
+++ b/3_Modulos_Paquetes_Bibliotecas.ipynb
@@ -23,7 +23,7 @@
     "    return sum(datos) / len(datos)\n",
     "\n",
     "def calcular_mediana(datos):\n",
-    "    datos_sorted = sorted(datos)\n",
+    "    datos_sorted = sorted(datos) # sorted es para ordenar los datos\n",
     "    n = len(datos)\n",
     "    mid = n // 2\n",
     "    if n % 2 == 0:\n",
@@ -92,11 +92,11 @@
    "outputs": [],
    "source": [
     "# Sin __init__\n",
-    "from analisis_datos.estadisticas import media,mediana\n",
+    "from analisis_datos.estadisticas import media, calcular_mediana\n",
     "\n",
     "datos = [10, 20, 30, 40, 50]\n",
     "print(\"Media:\", media(datos))\n",
-    "print(\"Mediana:\", mediana(datos))"
+    "print(\"Mediana:\", calcular_mediana(datos))"
    ]
   },
   {
